--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2",
     "whatsapp-web.js": "^1.26.0",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "@supabase/supabase-js": "^2.45.1"
   },
   "engines": {
     "node": ">=18.x"
